import { Stop } from "./Stop";

export type Direction = {
    name:string;
    shapeId:string;
    stops:Stop[]
}