export type MapOptions = {
    id:string;
    center;
    zoom:number;
    layers;
    pointermoveCallback?;
    clickCallback?;
}