export type Stop = {
    id:string;
    name:string;
    coordinates;
}